--- a/package.json
+++ b/package.json
@@ -24,7 +24,10 @@
     "jwt-decode": "^3.1.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.28.0"
+    "react-router-dom": "^6.28.0",
+    "styled-components": "^6.1.13",
+    "vazir-font": "^30.1.0",
+    "vazirmatn": "^33.0.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
